Add initiator app, Api class

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
     <title>Weather App</title>
   </head>
   <body>
-    <script type="module" src="script.js"></script>
+    <form action="" id="search">
+      <input type="text" name="city-search" id="city-search" />
+      <button type="submit">Search</button>
+    </form>
+    <div class="city-list">
+      <ul></ul>
+    </div>
+    <div class="weather-details">
+      <h1>Temanggung</h1>
+      <p>Hujan</p>
+    </div>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
