Add api response to frontend

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <div class="left">
         <div class="left__top">
           <h1>TheWeather</h1>
-          <img src="./search.svg" alt="Search Icon" />
+          <img class="left__top__searchIcon" src="./search.svg" alt="Search Icon" />
         </div>
 
         <div class="left__bottom">
@@ -25,8 +25,8 @@
           <p class="left__bottom__fl">Feels like 38'</p>
           <div class="divider"></div>
           <div class="left__bottom__footer">
-            <p>06:09 - Monday, 9 Sep 2019</p>
-            <p>Yogyakarta, Indonesia</p>
+            <p class="left__bottom__footer__date">06:09 - Monday, 9 Sep 2019</p>
+            <p class="left__bottom__footer__location">Yogyakarta, Indonesia</p>
           </div>
         </div>
       </div>
@@ -35,41 +35,37 @@
         <h2>Weather information</h2>
         <ul class="right__details">
           <li>
-            <span>Precipitation</span>
-            <span>50%</span>
-          </li>
-          <li>
-            <span>Pressure</span>
-            <span>50%</span>
+            <span>Air Quality Index</span>
+            <span class="right__details__aqi">50%</span>
           </li>
           <li>
             <span>Humidity</span>
-            <span>50%</span>
+            <span class="right__details__humidity">50%</span>
+          </li>
+          <li>
+            <span>Pressure</span>
+            <span class="right__details__pressure">50%</span>
           </li>
           <li>
             <span>UVI</span>
-            <span>50%</span>
+            <span class="right__details__uvi">50%</span>
           </li>
           <li>
             <span>Clouds</span>
-            <span>50%</span>
+            <span class="right__details__clouds">50%</span>
           </li>
           <li>
-            <span>VIsibility</span>
-            <span>50%</span>
+            <span>Visibility</span>
+            <span class="right__details__visibility">50%</span>
           </li>
           <li>
             <span>Wind speed</span>
-            <span>50%</span>
-          </li>
-          <li>
-            <span>Wind direction</span>
-            <span>50%</span>
+            <span class="right__details__wind">50%</span>
           </li>
         </ul>
 
         <h2>Next hours</h2>
-        <ul>
+        <ul class="right__nextHours">
           <li>
             <span>14:00</span>
             <span>icon here</span>
@@ -78,7 +74,7 @@
         </ul>
 
         <h2>Upcoming days</h2>
-        <ul>
+        <ul class="right__nextDays">
           <li>
             <span>Sunday, 9 Sept 2022</span>
             <span>icon here</span>
