--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,11 @@
       </div>
     </div>
 
+    <!-- Loading screen -->
+    <div class="loading-root loading-wrapper">
+      <div class="loading"></div>
+    </div>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
