--- a/src/index.html
+++ b/src/index.html
@@ -82,38 +82,28 @@
           </li>
         </ul>
       </div>
+    </div>
 
-      <!-- Form search -->
-      <div class="modal">
-        <div class="modal__container">
-          <h2>Find a location</h2>
+    <!-- Modal & Form search -->
+    <div class="modal">
+      <div class="modal__container">
+        <h2>Find a location</h2>
 
-          <form action="" class="search">
-            <div class="search__input">
-              <input type="text" name="city-search" id="city-search" />
-              <div class="search__loading loading-wrapper">
-                <div class="loading"></div>
-              </div>
-            </div>
-            <button type="submit">Search</button>
-          </form>
-          <div class="city-list">
-            <ul>
-              <li>Tes</li>
-            </ul>
-          </div>
-          <!-- <div class="weather-details">
-            <div class="weather-details__loading loading-wrapper">
+        <form action="" class="search">
+          <div class="search__input">
+            <input type="text" name="city-search" id="city-search" />
+            <div class="search__loading loading-wrapper">
               <div class="loading"></div>
             </div>
-            <div class="weather-details__content">
-              <h1>Temanggung</h1>
-              <p>Hujan</p>
-            </div>
-          </div> -->
-
-          <div class="close"></div>
+          </div>
+          <button type="submit">Search</button>
+        </form>
+        <div class="city-list">
+          <ul>
+            <li>Tes</li>
+          </ul>
         </div>
+        <div class="close"></div>
       </div>
     </div>
 
