Clean up files and add comments

--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,17 @@
 
         <div class="left__bottom">
           <div class="left__bottom__temp">
-            <span>40'</span>
+            <span></span>
             <div>
-              <h2>Rain</h2>
-              <p>Light rain</p>
+              <h2></h2>
+              <p></p>
             </div>
           </div>
-          <p class="left__bottom__fl">Feels like 38'</p>
+          <p class="left__bottom__fl"></p>
           <div class="divider"></div>
           <div class="left__bottom__footer">
-            <p class="left__bottom__footer__date">06:09 - Monday, 9 Sep 2019</p>
-            <p class="left__bottom__footer__location">Yogyakarta, Indonesia</p>
+            <p class="left__bottom__footer__date"></p>
+            <p class="left__bottom__footer__location"></p>
           </div>
         </div>
       </div>
@@ -36,51 +36,39 @@
         <ul class="right__details">
           <li>
             <span>Air Quality Index</span>
-            <span class="right__details__aqi">50%</span>
+            <span class="right__details__aqi"></span>
           </li>
           <li>
             <span>Humidity</span>
-            <span class="right__details__humidity">50%</span>
+            <span class="right__details__humidity"></span>
           </li>
           <li>
             <span>Pressure</span>
-            <span class="right__details__pressure">50%</span>
+            <span class="right__details__pressure"></span>
           </li>
           <li>
             <span>UVI</span>
-            <span class="right__details__uvi">50%</span>
+            <span class="right__details__uvi"></span>
           </li>
           <li>
             <span>Clouds</span>
-            <span class="right__details__clouds">50%</span>
+            <span class="right__details__clouds"></span>
           </li>
           <li>
             <span>Visibility</span>
-            <span class="right__details__visibility">50%</span>
+            <span class="right__details__visibility"></span>
           </li>
           <li>
             <span>Wind speed</span>
-            <span class="right__details__wind">50%</span>
+            <span class="right__details__wind"></span>
           </li>
         </ul>
 
         <h2>Next hours</h2>
-        <ul class="right__nextHours">
-          <li>
-            <span>14:00</span>
-            <span>icon here</span>
-            <span>32'</span>
-          </li>
-        </ul>
+        <ul class="right__nextHours"></ul>
 
         <h2>Upcoming days</h2>
-        <ul class="right__nextDays">
-          <li>
-            <span>Sunday, 9 Sept 2022</span>
-            <span>icon here</span>
-            <span>32'/42'</span>
-          </li>
-        </ul>
+        <ul class="right__nextDays"></ul>
       </div>
     </div>
 
@@ -99,9 +87,7 @@
           <button type="submit">Search</button>
         </form>
         <div class="city-list">
-          <ul>
-            <li>Tes</li>
-          </ul>
+          <ul></ul>
         </div>
         <div class="close"></div>
       </div>
